started with the HTML and made the create function.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
 
 </section>
 
+<section class="submit-story container">
+  <form action="" id="story-form" class="hidden" method="post">
+    <h4>Create a Story</h4>
+    <div>
+      <label for="title"> Title</label>
+      <input type="text" id="title">
+      <input type
+    </div>
+  </form>
+</section>
+
 <!-- Login and signup forms -->
 <section class="account-forms-container container">
 
