--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
   <div class="navbar-brand">
     <a class="nav-link" href="#" id="nav-all">Hack or Snooze</a>
   </div>
+  <div class="nav-profile-options">
+    <p>|<a class="nav-link">Submit</a>
+      |<a class="nav-link">Favorites</a>
+      |<a class="nav-link">My stories</a>
+    </p> 
+  </div>
   <div class="nav-right">
     <a class="nav-link" href="#" id="nav-login">login/signup</a>
     <a class="nav-link" href="#" id="nav-user-profile"></a>
@@ -55,14 +61,24 @@
 
 </section>
 
-<section class="submit-story container">
-  <form action="" id="story-form" class="hidden" method="post">
+<!-- submit stories form -->
+<section class="submit-forms-container container hidden">
+  <form action="#" id="story-form" class="account-forms-container" method="post">
     <h4>Create a Story</h4>
     <div>
-      <label for="title"> Title</label>
+      <label for="title">Title</label>
       <input type="text" id="title">
-      <input type
     </div>
+    <div>
+      <label for="author">Author</label>
+      <input type="text" id="author">
+    </div>
+    <div>
+      <label for="url">URL</label>
+      <input type="text"  id="url">
+    </div>
+      <button type="submit">Create</button>
+    
   </form>
 </section>
 
