finish up to step 4, now I ownly have to style the page

--- a/index.html
+++ b/index.html
@@ -61,6 +61,20 @@
 
 </section>
 
+<section class="favorites-container container">
+
+  <!-- list of favorite stories -->
+
+  <ol id="favorite-stories-list" class="stories-list"></ol>
+  
+
+</section>
+
+<section class="my-stories-container container">
+
+  <ul id="my-stories-list" class="stories-list"></ol>
+</section>
+
 <!-- submit stories form -->
 <section class="submit-forms-container container ">
   <form action="#" id="story-form" class="account-forms-container hidden" method="post">
